# farm_first_project

./: .dockerignore  docker-compose.yaml  pyproject.toml
app/: main.py  models.py
app/core/: config.py  database.py
app/urls/: students.py
tests/: conftest.py  test_main.py  test_student_router.py
