[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
motor = "^3.4.0"
beanie = "^1.25.0"
pydantic-settings = "^2.2.1"
pydantic = {extras = ["email"], version = "^2.6.4"}
pytest-asyncio = "^0.23.6"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
ruff = "^0.3.4"
isort = "^5.13.2"
blue = "^0.9.1"
httpx = "^0.27.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[tool.ruff]
line-length = 79
exclude = ['.venv', 'migrations']

[tool.pytest.ini_options]
python_classes = ["Test", "Describe"]
python_functions = ["test_", "it_", "and_", "but_", "they_"]
python_files = ["test_*.py",]
testpaths = ["tests",]

[tool.blue]
extend-exclude = '(migrations/)'

[tool.taskipy.tasks]
lint = 'ruff . && blue --check . --diff && isort --check . --diff'
format = 'blue .  && isort .'
run = 'uvicorn app.main:app --reload'
pre_test = 'task lint'
test = 'pytest -s -x --cov=app -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
